Fix 404 page overflow

--- a/app/not-found.module.scss
+++ b/app/not-found.module.scss
@@ -8,6 +8,7 @@
 .site {
     display: flex;
     flex-direction: column;
+    min-width: 0;
 }
 
 .imageWrapper {
